fixed alignment and title

--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -17,7 +17,7 @@
 
 .projects-wrapper h1 {
     color: #0B24F5;
-    font-size: 35px;
+    font-size: 50px;
     width: 100%;
     text-align: center;
  }
