--- a/src/components/tech/Tech.css
+++ b/src/components/tech/Tech.css
@@ -15,7 +15,7 @@ justify-content: center;
 
 .tech-title {
     color: #FFFFFF;
-    font-size: 30px;
+    font-size: 50px;
 
 }
 
